# lyrane

./: Cargo.toml  README.md  build-bundle-and-sign.sh  entitlements.plist
repo-assets/: screenshot-1.avif
src/: app.rs  app_window.rs  create_app_window.rs  lyrics_fetcher.rs  lyrics_line.rs  lyrics_syncer.rs  main.rs  now_playing_update_listener.rs  now_playing_update_message.rs  now_playing_update_script.rs  persistent_stored_config.rs
