[package]
name = "lyrane"
version = "0.1.0"
edition = "2024"
description = "Synchronized lyrics overlay for macOS"

[package.metadata.bundle]
name = "Lyrane"
identifier = "com.thatmarcel.apps.lyrane"
icon = ["assets/icon-32x32.png", "assets/icon-128x128.png", "assets/icon-128x128@2x.png"]
category = "public.app-category.music"

[dependencies.anyhow]
version = "1.0.100"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.149"

[dependencies.objc2]
version = "0.6.4"

[dependencies.objc2-foundation]
version = "0.3.2"

[dependencies.objc2-app-kit]
version = "0.3.2"
features = ["objc2-core-graphics", "objc2-quartz-core"]

[dependencies.objc2-quartz-core]
version = "0.3.2"
features = ["objc2-core-graphics", "objc2-core-foundation"]

[dependencies.block2]
version = "0.6.2"

[dependencies.dispatch2]
version = "0.3.1"

[dependencies.ctrlc]
version = "3.5.2"
features = ["termination"]

[dependencies.ureq]
version = "3.3.0"
features = ["brotli", "json"]